<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InsTrack</string>
    <string name="main_ll1_text">Karşılıklı Takipleştiklerim</string>
    <string name="main_ll2_text">Geri Takip Etmediklerim</string>
    <string name="main_ll3_text">Beni Takip Etmeyenler</string>
    <string name="login_btn_text">Giriş Yap</string>
    <string name="login_et_password_text">Şifre</string>
    <string name="login_et_username_text">Kullanıcı Adı</string>
    <string name="item_user_unfollow_btn_text">Takipten Çık</string>
    <string name="item_user_follow_btn_text">Takip Et</string>
    <string name="item_user_cancel_btn_text">İsteği İptal Et</string>
    <string name="two_fa_btn_verify_text">Onayla</string>
    <string name="two_fa_tv_verify_code_text">Doğrulama Kodu</string>
    <string name="author_description">Şevket Eren KAYNAR tarafından oluşturuldu\nİletişim: sqayner@gmail.com</string>
</resources>