<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/fontspring_demo_blue_vinyl_bold_ps_ot"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="40sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/login_et_username_text"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/login_et_password_text"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/login_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@null" />

</LinearLayout>